--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-bottom: 70px;
+  padding-top: 30px;
 }
 
 code {
@@ -12,10 +13,6 @@ code {
 }
 
 /* start header ------------ */
-.header {
-  /* background: rgb(0, 119, 115);
-  background: linear-gradient(90deg, rgba(0, 119, 115, 1) 0%, rgba(15, 198, 191, 1) 63%); */
-}
 
 .header .logo,
 .header .list a {
